@@ -1,3 +1,3 @@
 module RailsLayout
-  VERSION = "1.0.7"
+  VERSION = "1.0.8"
 end
