@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 1.0.8 February 24, 2014
+
+* add 'name' field to Devise registration forms if 'name' is an attribute in the User object
+
 h3. 1.0.7 February 15, 2014
 
 * generate Devise navigation links when Devise initializer is present
